[package]
name = "oxide"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
crossterm = "0.29.0"
image = "0.25.9"
img-parts = "0.4.0"
kamadak-exif = "0.6.1"
ratatui = "0.30.0"
rayon = "1.11.0"
wgpu = "22"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
